--- a/t13-nu-kenzie/src/Components/Telainicial/telainicial.css
+++ b/t13-nu-kenzie/src/Components/Telainicial/telainicial.css
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    display: none;
+    display: flex;
     
 }
 h2,h3{
