--- a/t13-nu-kenzie/src/App.css
+++ b/t13-nu-kenzie/src/App.css
@@ -1,13 +1,27 @@
 .App {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
 }
 
 .Display{
  display: flex;
- justify-content: space-around;
+ justify-content: center;
  margin-top: 35px;
  height: 100vh;
- 
+ width: 100%;
 }
+
+@media (max-width:1015px){
+   .Display{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   }
+   
+}
+
 
