--- a/t13-nu-kenzie/src/Components/Enviados/Enviados.css
+++ b/t13-nu-kenzie/src/Components/Enviados/Enviados.css
@@ -1,10 +1,27 @@
+.Style-Sent{
+  display: flex;
+  flex-direction: column;
+  margin-left: 58px;
+  width: 30%;
+}
+.Value__Sent{
+  display: flex;
+  justify-content: space-around;
+  width: 40%;
+  
+  align-content: center;
+}
+
+
+
 .Enviados{
-  width: 560px;
+  width: 100%;
   height: 87px;
-  background: #F8F9FA;  
+  background: var(---color-white);  
   border-radius: 4px;
   display: flex;
   justify-content: space-between;
+  padding: 0;
   
 }
 .Ul-Enviados{
@@ -12,6 +29,25 @@
     list-style: none;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    overflow-x: auto;
+    justify-content: space-around;
+    justify-content: flex-start;
+    overflow: auto;
+    padding: 0;
+}
+
+.Img-notSent{
+  width: 100%;
+}
+
+h1{
+  font-size: 22px;
+}
+
+@media(max-width:1015px){
+  .Style-Sent{
+    width: 80%;
+    margin-top: 20px;
+    margin-left: 0px;
+  }
+  
 }
