--- a/t13-nu-kenzie/src/Components/Envios/Envios.css
+++ b/t13-nu-kenzie/src/Components/Envios/Envios.css
@@ -1,67 +1,112 @@
-.Envios{
-    width:25%;
-    height:35% ;
-    border-color:#E9ECEF ;
-    border: 1px solid #E9ECEF;
-    border-radius: 4px;
-    
-    
+.Envios {
+  width: 25%;
+  height: 50%;
+  border-color: var(---color-white3);
+  border: 1px solid var(---color-white3);
+  border-radius: 4px;
 }
 
-.h1{
-    width: 57px;
-    height: 22px;
-    font-size: 12px;
-}
-.Input-descricao{
-   width: 314px;
-   height: 52px;
-   border-radius: 6px; 
-   background-color: #F8F9FA;
-   border: 2px solid #F8F9FA;
-}
-.h2{
- font-size: 12px;
- color: #868E96;
-}
-.Display-valor{
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
+.h1 {
+  width: 57px;
+  height: 22px;
+  font-size: 12px;
+  white-space: nowrap;
+  display: flex;
 }
 
-.Input-Valor,.Select{
-    width: 128px;
-    height: 48px;
-    border-radius: 8px;
-    display: flex;
-    justify-content: space-between;
-    background: #F8F9FA;
-    border: 2px solid #F8F9FA;
+.h1sent {
+  width: 80%;
+}
+.h1sent__Value__Select{
+    width: 60%;
 }
 
-.Form-envios{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+
+
+.Input-descricao {
+  width: 80%;
+  height: 52px;
+  border-radius: 6px;
+  background-color: var(---color-white);
+  border: 2px solid var(---color-white);
 }
-.Button-inserir{
-    width: 80%;
-    height: 60%;
-    background: #FD377E;
-    border: 2px solid #FD377E;
-    border-radius: 8px;
-    color: white;
-    
+.h2 {
+  font-size: 12px;
+  color: #868e96;
+  display: flex;
 }
-.Div-button{
-    width: 100%;
-    height: 20%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.Display-valor {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+.Div__Value__Select {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.Input-Valor,
+.Select {
+  width: 60%;
+  height: 48px;
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  background: var(---color-white);
+  border: 2px solid var(---color-white);
+}
+.Formsub-envios {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.Form-envios {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.Button-inserir {
+  width: 80%;
+  height: 52px;
+  background: var(---color-primary);
+  border: 2px solid var(---color-primary);
+  border-radius: 8px;
+  color: var(---color-white2);
+}
+.Div-button {
+  width: 100%;
+  height: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width:1015px){
+    .Envios{
+        width: 80%;
+        
+    }
+    .Button-inserir{
+      height: 80%;
+    }
+}
+@media (min-width:1650px){
+    .Envios{
+        max-width: 27%;
+        
+    }
+}
+@media(width:360px)
+{
+  .Envios{
+    width:80% ;
+  }
 }
