--- a/t13-nu-kenzie/src/Components/Nav/Nav.css
+++ b/t13-nu-kenzie/src/Components/Nav/Nav.css
@@ -1,7 +1,7 @@
 .Nav{
-    background-color:white;
+    background-color:var(---color-white2);
     width: 100%;
-    height: 10%;
+    height: 13%;
     display: flex;
     justify-content: space-around;
     box-shadow: 0px 4px 32px -12px rgba(0, 0, 0, 0.25);
