--- a/t13-nu-kenzie/src/Components/Telainicial/telainicial.css
+++ b/t13-nu-kenzie/src/Components/Telainicial/telainicial.css
@@ -1,49 +1,68 @@
-.Div-inicial{
-    width: 100vw;
-    height: 100vh;
-    position: initial;
-    background: #000000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    display: flex;
-    
+.Div-inicial {
+  width: 100%;
+  height: 100vh;
+  position: initial;
+ background-color: var(---color-black);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  display: flex;
 }
-h2,h3{
-    color: white;
+h2,
+h3 {
+  color:var(---color-white2);
 }
-h2{
-    font-size: 32px;
-    
-    
+h2 {
+  font-size: 32px;
+  display: flex;
+  justify-content: center;
 }
-.button{
-   width: 241px;
-   height: 48px; 
-   background: #FD377E;
-   border: 2px solid #FD377E;
-   border-radius: 8px;
-}
-
-.Div-Iniciar{
-    height: 100vh;
-    width: 50vw;
-    display: flex;
-    justify-content: center;
-    
-    flex-direction: column;
-    
+.button {
+  width: 241px;
+  height: 48px;
+  background:var(---color-primary);
+  border: 2px solid var(---color-primary);
+  border-radius: 8px;
 }
 
-.Nu{
-    width: 122px;
-
+.Div-Iniciar {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.Display-flex{
-    display: flex;
+.Nu {
+  width: 122px;
 }
-.Display-none{
+
+.Display-flex {
+  display: flex;
+}
+.Display-none {
+  display: none;
+}
+@media (max-width: 896px) {
+  .Img__Initial {
     display: none;
+  }
+  h2 {
+    display: flex;
+    width: 100%;
+    font-size: 20px;
+    justify-content: center;
+  }
 }
+@media (min-width: 360px) {
+  h2 {
+    width: 60%;
+  }
+}
+/* @media(max-width:1090px){
+  h2{
+    width: 50%;
+  }
+} */
